## Process this file with automake to create Makefile.in
AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = intl po src tests

EXTRA_DIST = TODO README \
             vms/make.com vms/README \
             djgpp/config.bat djgpp/config.h \
             djgpp/po2tbl.sed djgpp/intl.mak \
             djgpp/main.mak djgpp/po.mak \
             djgpp/src.mak djgpp/tests.mak \
             djgpp/README
